tests/snapshots/protocols__serialize__tests__add_transaction.snap
---
source: src/serialize.rs
expression: content
---
struct Adder {
  in a: u32,
  in b: u32,
  out s: u32,
}

fn add<DUT: Adder>(in a: u32, in b: u32, out s: u32) {
  DUT.a := a;
  DUT.b := b;
  step(1);
  fork();
  DUT.a := X;
  DUT.b := X;
  s := DUT.s;
  DUT.s := a;
  assert_eq(s, DUT.s);
}
