tests/snapshots/protocols__serialize__tests__aes128_prot.snap
---
source: src/serialize.rs
expression: content
---
struct TinyAES128 {
  in key: u128,
  in state: u128,
  out output: u128,
}

fn aes128<dut: TinyAES128>(in key: u128, in state: u128, out output: u128) {
  dut.state := state;
  dut.key := key;
  step(1);
  fork();
  dut.state := X;
  dut.key := X;
  step(20);
  assert_eq(dut.output, output);
}
