tests/snapshots/protocols__serialize__tests__calyx_go_done_transaction.snap
---
source: src/serialize.rs
expression: content
---
struct Calyx {
  in ii: u32,
  in go: u32,
  out done: u1,
  out oo: u32,
}

fn calyx_go_done<dut: Calyx>(in ii: u32, out oo: u32) {
  dut.ii := ii;
  dut.go := 1;
  while !(dut.done == 1) {
    step(1);
  }
  dut.go := 0;
  dut.ii := X;
  oo := dut.oo;
}
